using System;
using System.Collections.Generic;

namespace Chatbot.Models
{
    [Serializable]
    public class ChatDataset
    {
        public List<ChatCategory> categories;
    }
}
